# gdrive-mcp

./: .gitignore  LICENSE  README.md  auth.py  helpers.py  pyproject.toml  server.py  services.py
docs/plans/: 2026-02-27-gmail-calendar-docs-enhancement-design.md  2026-02-27-implementation-plan.md
tools/: __init__.py  calendar.py  comments.py  docs.py  drive.py  gmail.py  management.py  scripts.py  sheets.py  slides.py
